update home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.hml" class="active">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="cv.html">CV</a>
@@ -43,18 +43,25 @@
         </script>
         
         <!--About me-->
+        <div class="main-page">
+            <aside class="left">
+                <h1 style="font-size: 32px">Hei, jeg er</h1>
+                <p>UX Designer og utvikler</p>
+                <p>Tredjeårsstudent i Informatikk og interaksjonsdesign ved UiO. Nyter å undersøke andres historier, gjøre deep-dives innen UX, lage SQL queries og være en venn for alle.</p>
+                <p>La oss ta en kopp matcha sammen!</p>
+                <p>linnshjulstad@gmail.com</p>
+                <p>+47 929 71 399</p>
+            </aside>
+            <main class="right">
+                <img style="width: 500px; border-radius: 10px;" src="moo-deng.webp" alt="">
+                <h1>Moo deng kha</h1>
+                <p>Moo deng er godt. Moo deng er en type kjøtt på Thai. I Thailand liker de å kalle kjæledyra sine etter mat.</p>
+            </main>
         </div>
-        <div style="font-family: 'Courier New', Courier, monospace; display: flex; flex-direction: column; align-items: center; padding: 50px;">
-           
-            <img style="width: 250px; border-radius: 10px;" src="moo-deng.webp" alt="">
-            <h1>Hei!</h1>
-            <p style="text-align: center;">Moo deng er godt. Moo deng er en type kjøtt på Thai. I Thailand liker de å kalle kjæledyra sine etter mat</p>
-            <p>La oss ta en kopp matcha sammen!</p>
-            <p>linnshjulstad@gmail.com</p>
-            <p>+47 940 94 495</p>
+        <footer class="footer">
             <a href="https://github.com/linn-s-h">github</a>
             <a href="https://www.linkedin.com/in/linn-srongyoo-hjulstad-406772251">linkdin</a>
-        </div>
+        </footer>
         <script src="" async defer></script>
     </body>
 </html>
