--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>heisann!</title>
+        <title>about me!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -20,7 +20,7 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.hml" class="active">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="cv.html">CV</a>
@@ -51,7 +51,7 @@
             <p style="text-align: center;">Moo deng er godt. Moo deng er en type kjøtt på Thai. I Thailand liker de å kalle kjæledyra sine etter mat</p>
             <p>La oss ta en kopp matcha sammen!</p>
             <p>linnshjulstad@gmail.com</p>
-            <p>+47 940 94 495</p>
+            <p>+47 929 71 399</p>
             <a href="https://github.com/linn-s-h">github</a>
             <a href="https://www.linkedin.com/in/linn-srongyoo-hjulstad-406772251">linkdin</a>
         </div>
