--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>cv</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -20,7 +20,7 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.hml" class="active">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="cv.html">CV</a>
