--- a/cv.html
+++ b/cv.html
@@ -20,13 +20,13 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="cv.html">CV</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="cv.html" class="active">CV</a>
                     </li>
                     <li>
                         <a href="about-me.html">About me</a>
@@ -41,10 +41,6 @@
                 navBar.classList.toggle("active");
             }
         </script>
-        <div>
-            <h1>Mine prosjekter</h1>
-            <p>Gjerne ta en titt rundt i samlingen min</p>
-        </div>
         
         <script src="" async defer></script>
     </body>
