--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html" class="active">Portfolio</a>
                     </li>
                     <li>
                         <a href="cv.html">CV</a>
-                    </li>
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
                     </li>
                     <li>
                         <a href="about-me.html">About me</a>
@@ -41,6 +41,14 @@
                 navBar.classList.toggle("active");
             }
         </script>
+
+        <div>
+            <div style="text-align: center;">
+            <h1 style="font-size: 54px;">Mine prosjekter</h1>
+            <p>Prosjektene mine er sentrert rundt UX og brukere, mens jeg får mestret de tekniske delene.</p>
+            <p>Gjerne ta en titt rundt i samlingen min</p>
+            <p>Coming soon. Hehe</p>
+        </div>
    
         
         <script src="" async defer></script>
