make img responsive

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
             <h1 style="font-size: 54px">Linn Hjulstad</h1>
             <p style="font-size: 24px">UX Designer og utvikler</p>
-            <img style="width: 550px; border-radius: 10px;" src="linn-3.png" alt="">
+            <div class="img">
+                <img style="width: 550px; border-radius: 10px;" src="linn-3.png" alt="">
+            </div>
+        
         </div>
         <div>
             <div style="font-family: 'Courier New', Courier, monospace; display: flex; flex-direction: column; align-items: center; text-align: center; padding: 50px; background-color: lightcyan;">
