--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,7 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="portfolio.html">Portfolio</a>
@@ -29,7 +29,7 @@
                         <a href="cv.html">CV</a>
                     </li>
                     <li>
-                        <a href="about-me.html" class="active">About me</a>
+                        <a href="about-me.html">About me</a>
                     </li>
                 </ul>
             </nav>
