--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="portfolio.html" class="active">Portfolio</a>
+                        <a href="portfolio.html">Portfolio</a>
                     </li>
                     <li>
                         <a href="cv.html">CV</a>
