update portfolio summary

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,11 +43,14 @@
         </script>
 
         <div>
-            <div style="text-align: center;">
+            <div style="text-align: center">
             <h1 style="font-size: 54px;">Mine prosjekter</h1>
-            <p>Prosjektene mine er sentrert rundt UX og brukere, mens jeg får mestret de tekniske delene.</p>
-            <p>Gjerne ta en titt rundt i samlingen min</p>
-            <p>Coming soon. Hehe</p>
+            <h3 style="font-family: monospace; padding-left: 100px; padding-right: 100px">Som del av studiet mitt og andre prosjekter, har jeg utviklet flere outputs om design fra et akademisk perspektiv. 
+                Prosjektene mine er hovedsakelig gjort i team, og sentrert rundt design og brukere, mens jeg får mestret de mer 
+                tekniske delene. Arbeidet mitt inkluderer eksplorerende tenkning i iterative designprosesser, 
+                prototyping, anvendning av design-rammeverk, refleksjoner knyttet til designproblemer og mapping av 
+                komplekse systemer i organisasjoner. </h3>
+            <p style="font-family: monospace; padding: 100px">Coming soon. Hehe</p>
         </div>
    
         
