--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <!--About me-->
 
         <!--Introduction and img-->
-        <div class="rows">
+        <div class="rows" style="background-color: #11101b;">
             <!--Left Column-->
-            <div class="columns" style="background-color: #11101b; padding: 100px;">
+            <div class="columns" style="padding: 100px;">
                 <h2 style="font-family: 'Courier New'; text-align: left; color: #fefefe;">UX Designer</h2>
                 <p style="font-family: 'Courier New'; text-align: left; color: #fefefe;">3-årsstudent i informatikk og interaksjonsdesign ved UiO. Jeg liker spesielt å gjøre deep-dives innen UX 
                     og spille design-detektiv. Jeg har en gnist for å forstå menneskers behov og deres interaksjoner med teknologi, 
