--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <body>
           <!--Responsive navbar-->
           <header style="font-family: 'Courier New', Courier, monospace;">
-            <div class="logo">Linn Hjulstad</div>
+            <div class="logo">Linn S. Hjulstad</div>
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -20,16 +20,16 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="cv.html">CV</a>
                     </li>
                     <li>
                         <a href="about-me.html">About me</a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="active">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -43,14 +43,7 @@
         </script>
 
         <div>
-            <div style="text-align: center">
-            <h1 style="font-size: 54px;">Mine prosjekter</h1>
-            <h3 style="font-family: monospace; padding-left: 250px; padding-right: 250px">Som del av studiet mitt og andre prosjekter, har jeg utviklet flere outputs om design fra et akademisk perspektiv. 
-                Prosjektene mine er hovedsakelig gjort i team, og sentrert rundt design og brukere, mens jeg får mestret de mer 
-                tekniske delene. Arbeidet mitt inkluderer eksplorerende tenkning i iterative designprosesser, 
-                prototyping, anvendning av design-rammeverk, refleksjoner knyttet til designproblemer og mapping av 
-                komplekse systemer i organisasjoner. </h3>
-            <p style="font-family: monospace; padding: 100px">Coming soon. Hehe</p>
+          
         </div>
    
         
