--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
     <body>
          <!--Responsive navbar-->
          <header style="font-family: 'Courier New', Courier, monospace;">
-            <div class="logo">Linn Hjulstad</div>
+            <div class="logo">Linn S. Hjulstad</div>
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -20,16 +20,16 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="cv.html">CV</a>
+                        <a href="cv.html" class="active">CV</a>
                     </li>
                     <li>
                         <a href="about-me.html">About me</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
