--- a/index.html
+++ b/index.html
@@ -57,7 +57,67 @@
             <span style="font-size:100px; color: #fefefe;">&#8595;</span>
         </div>   
 
-        <!--Projects-->   
+        <!--Projects-->
+        <div class="card-div">
+            <a href="pawcast.html" class="card">
+                <img src="moo-deng.webp" alt="Card image">
+                <div class="card-content">
+                    <h3 class="card-title">Pawcast</h3>
+                    <p class="card-description">
+                        Android-app utviklet og designet i samarbeid med fem andre studenter. 
+                        Utviklet i Kotlin med Jetpack Compose, og integrert med Meteorologisk institutts API for værdata. 
+                        Teamet jobbet etter Scrumban-prinsipper og tett sammen for smidig utvikling. Hovedrollen min var UX/UI, 
+                        hvor jeg planlagte og gjennomførte brukerintervjuer, ekspertintervjuer, analyserte innsikter for 
+                        eventuelle løsninger og designet prototyper.</p>
+                </div>
+            </a>
+        </div>
+
+        <div class="card-div">
+            <a href="motion-finish.html" class="card">
+                <img src="moo-deng.webp" alt="Card image">
+                <div class="card-content">
+                    <h3 class="card-title">Motion-finish</h3>
+                    <p class="card-description">
+                        Motion-finish er en 'tangible' løsning laget med sensorer og Arduino, som prototypingsverktøy.
+                        I team med fire andre designstudenter, fulgte vi tilnærminger i bruksorientert design og utviklet
+                        en løsning gjennom workshops med brukere. Løsningen gir unge, konkurrerende friidrettsutøvere mulighet
+                        til å måle sin egen tid mer effektivt når man trener alene. 
+                    </p>
+                </div>
+            </a>
+        </div>
+
+        <div class="card-div">
+            <a href="garden-paradise.html" class="card">
+                <img src="moo-deng.webp" alt="Card image">
+                <div class="card-content">
+                    <h3 class="card-title">Garden Paradise</h3>
+                    <p class="card-description">
+                        In Spring 2024, I spent a semester in South Korea on exchange. Garden Paradise was 
+                        a collaborative team project in my all-time favorite course — Relational Databases. 
+                        It's a plant search tool for beginner plant owners looking to expand 
+                        their collection and need help narrowing down "next plant" options. The intention is 
+                        to let users expand their plant knowledge and dictionary, and save their searches 
+                        for future reference. This project was developed using Python and SQL, with Tkinter 
+                        for GUI. Our data comes from Queensland’s Government’s ‘Waterwise Plants’ dataset. </p>
+                </div>
+            </a>
+        </div>
+
+        <p style="color: #fefefe; display: flex; justify-content: center; align-items: center; font-style: italic;">
+            Laget av Linn, 7/9/2025 00:49.
+        </p>
+
+        <div class="center-div" style="height: 22vh; background-color: white; column-count: 4; column-gap: 40px; column-rule-style: solid; flex-direction: column;">
+            
+            <h1>La oss ta en kopp matcha sammen!</h1>
+            <p>linnshjulstad@gmail.com</p>
+            <p>929 71 399</p>
+            <p>Linkedin og GitHub</p>
+      
+        </div>
+
 
         <script src="" async defer></script>
     </body>
