--- a/motion-finish.html
+++ b/motion-finish.html
@@ -20,10 +20,10 @@
             <nav class="nav-bar">
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="cv.html" class="active">CV</a>
+                        <a href="cv.html">CV</a>
                     </li>
                     <li>
                         <a href="about-me.html">About me</a>
