add more text. fix: everything.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class="card-div">
             <a href="garden-paradise.html" class="card">
-                <img src="moo-deng.webp" alt="Card image">
+                <img src="garden-paradise.png" alt="Card image">
                 <div class="card-content">
                     <h3 class="card-title">Garden Paradise</h3>
                     <p class="card-description">
@@ -106,15 +106,15 @@
         </div>
 
         <p style="color: #fefefe; display: flex; justify-content: center; align-items: center; font-style: italic;">
-            Laget av Linn, 7/9/2025 00:49.
+            Laget av Linn, 8/20/2025 21:11.
         </p>
 
-        <div class="center-div" style="height: 22vh; background-color: white; column-count: 4; column-gap: 40px; column-rule-style: solid; flex-direction: column;">
+        <div class="center-div" style="color: #fefefe;">
             
             <h1>La oss ta en kopp matcha sammen!</h1>
             <p>linnshjulstad@gmail.com</p>
             <p>929 71 399</p>
-            <p>Linkedin og GitHub</p>
+            <a href="https://www.https://github.com/linn-s-h"><img><img src="icons8-github-50.png" alt="GitHub Profil" width="50" height="50"></a>
       
         </div>
 
