change padding from 26px to 18px

--- a/garden-paradise.html
+++ b/garden-paradise.html
@@ -43,7 +43,7 @@
         </script>
 
         <!--Tittel og sammendrag-->
-        <div class="center-div" style="color: #fefefe; max-width: 1000px; padding: 26px;">
+        <div class="center-div" style="color: #fefefe; max-width: 1000px; padding: 18px;">
             <h1 >Garden Paradise</h1>
             <p>In Spring 2024, I spent a semester in South Korea on exchange. Garden Paradise was 
                 a collaborative team project in my all-time favorite course — Relational Databases. 
@@ -88,7 +88,7 @@
         <hr style="color: #fefefe; max-width: 1000px;"></hr>
 
         <!--Main Functionalities-->
-        <div class="center-div" style="color: #fefefe;">
+        <div class="center-div" style="color: #fefefe; padding: 18px;">
             <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: lighter;">Main Functionalities</h1>
             <ul>
                 <li>Quick search for plants based on user input (e.g., plant type, size, light requirements)</li>
@@ -101,7 +101,7 @@
         </div>
 
         <!--Design Choices-->
-        <div class="center-div" style="color: #fefefe; max-width: 1000px;">
+        <div class="center-div" style="color: #fefefe; max-width: 1000px; padding: 18px;">
             <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: lighter;">
                 Though this was a mainly coding project about databases, we made sure to also have design in mind. </h1>
             <p>Throughout the project we made small, yet intentional design choices:</p>
@@ -115,7 +115,7 @@
         </div>
 
         <!--Iterative Design-->
-        <div class="center-div" style="color: #fefefe; max-width: 1000px;">
+        <div class="center-div" style="color: #fefefe; max-width: 1000px; padding: 18px;">
             <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: lighter;">We had an iterative process and made some design changes</h1>
             <p>I conducted usability tests on friends and my roommates, in different iterations of the app. 
                 To discover new errors throughout the development phase, we continously changed participant.</p>
@@ -123,7 +123,7 @@
         </div>
 
         <!--Potenial Improvements-->
-        <div class="center-div" style="color: #fefefe; max-width: 1000px;">
+        <div class="center-div" style="color: #fefefe; max-width: 1000px; padding: 18px;">
             <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: lighter;">Potential Improvements</h1>
             <p>Due to the project’s time constraints, we down-prioritized making bigger design changes, 
                 even though there were a few painstakingly obvious ones.</p>
@@ -135,7 +135,7 @@
         </div>
 
         <!--What did I learn?-->
-        <div class="center-div" style="color: #fefefe; max-width: 1000px;">
+        <div class="center-div" style="color: #fefefe; max-width: 1000px; padding: 18px;">
             <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: lighter;">What did I learn?</h1>
         </div>
         
