do changes for mobile version

--- a/garden-paradise.html
+++ b/garden-paradise.html
@@ -78,7 +78,7 @@
                 <tr>
                     <td>November 16th - December 13th</td>
                     <td>DB designer, data modelling, data acquisition and cleaning, UI/UX, task delegator</td>
-                    <th>Technical Python, SQL, Tkinter for GUI, Pillow (PIL)</th>
+                    <th>Python, SQL, Tkinter for GUI, Pillow (PIL)</th>
                 </tr>
 
             </table>
