--- a/index.html
+++ b/index.html
@@ -42,74 +42,75 @@
                 navBar.classList.toggle("active");
             }
         </script>
-        
+        <div class="main">
         <!--Introduction-->
-        <div class="img">
-            <img src="skisse.png" alt="Picture of me" width="800" height="800">
+            <div class="img">
+                <img src="skisse.png" alt="Picture of me" width="800" height="800">
+            </div>
+
+            <div style="text-align: center; padding: 10px">
+                <h1 class="intro-text">Hi, I'm Linn, an UX designer based in Oslo. With a background in informatics, design and user interaction, I make user-centric digital solutions.</h1>   
+            </div>
+
+            <div style="text-align: center; padding: 10px">
+                <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: #fefefe;">Take a look</h3>
+                <span style="font-size:100px; color: #fefefe;">&#8595;</span>
+            </div>   
+
+            <!--Projects-->
+            <div class="card-div">
+                <a href="pawcast.html" class="card">
+                    <img src="pawcast-card.png" alt="Card image">
+                    <div class="card-content">
+                        <h3 class="card-title">Pawcast</h3>
+                        <p class="card-description">
+                            Android-app utviklet og designet i samarbeid med fem andre studenter. 
+                            Utviklet i Kotlin med Jetpack Compose, og integrert med Meteorologisk institutts API for værdata. 
+                            Teamet jobbet etter Scrumban-prinsipper og tett sammen for smidig utvikling. Hovedrollen min var UX/UI, 
+                            hvor jeg planlagte og gjennomførte brukerintervjuer, ekspertintervjuer, analyserte innsikter for 
+                            eventuelle løsninger og designet prototyper.</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card-div">
+                <a href="motion-finish.html" class="card">
+                    <img src="moo-deng.webp" alt="Card image">
+                    <div class="card-content">
+                        <h3 class="card-title">Motion-finish</h3>
+                        <p class="card-description">
+                            Motion-finish er en 'tangible' løsning laget med sensorer og Arduino, som prototypingsverktøy.
+                            I team med fire andre designstudenter, fulgte vi tilnærminger i bruksorientert design og utviklet
+                            en løsning gjennom workshops med brukere. Løsningen gir unge, konkurrerende friidrettsutøvere mulighet
+                            til å måle sin egen tid mer effektivt når man trener alene. 
+                        </p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card-div">
+                <a href="garden-paradise.html" class="card">
+                    <img src="garden-paradise.png" alt="Card image">
+                    <div class="card-content">
+                        <h3 class="card-title">Garden Paradise</h3>
+                        <p class="card-description">
+                            In Spring 2024, I spent a semester in South Korea on exchange. Garden Paradise was 
+                            a collaborative team project in my all-time favorite course — Relational Databases. 
+                            It's a plant search tool for beginner plant owners looking to expand 
+                            their collection and need help narrowing down "next plant" options. The intention is 
+                            to let users expand their plant knowledge and dictionary, and save their searches 
+                            for future reference. This project was developed using Python and SQL, with Tkinter 
+                            for GUI. Our data comes from Queensland’s Government’s ‘Waterwise Plants’ dataset. </p>
+                    </div>
+                </a>
+            </div>
+
+            <p style="color: #fefefe; display: flex; justify-content: center; align-items: center; font-style: italic;">
+                Laget av Linn, 8/20/2025 21:11.
+            </p>
         </div>
 
-        <div style="text-align: center; padding: 10px">
-            <h1 class="intro-text">Hi, I'm Linn, an UX designer based in Oslo. With a background in informatics, design and user interaction, I make user-centric digital solutions.</h1>   
-        </div>
-
-        <div style="text-align: center; padding: 10px">
-            <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: #fefefe;">Take a look</h3>
-            <span style="font-size:100px; color: #fefefe;">&#8595;</span>
-        </div>   
-
-        <!--Projects-->
-        <div class="card-div">
-            <a href="pawcast.html" class="card">
-                <img src="moo-deng.webp" alt="Card image">
-                <div class="card-content">
-                    <h3 class="card-title">Pawcast</h3>
-                    <p class="card-description">
-                        Android-app utviklet og designet i samarbeid med fem andre studenter. 
-                        Utviklet i Kotlin med Jetpack Compose, og integrert med Meteorologisk institutts API for værdata. 
-                        Teamet jobbet etter Scrumban-prinsipper og tett sammen for smidig utvikling. Hovedrollen min var UX/UI, 
-                        hvor jeg planlagte og gjennomførte brukerintervjuer, ekspertintervjuer, analyserte innsikter for 
-                        eventuelle løsninger og designet prototyper.</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="card-div">
-            <a href="motion-finish.html" class="card">
-                <img src="moo-deng.webp" alt="Card image">
-                <div class="card-content">
-                    <h3 class="card-title">Motion-finish</h3>
-                    <p class="card-description">
-                        Motion-finish er en 'tangible' løsning laget med sensorer og Arduino, som prototypingsverktøy.
-                        I team med fire andre designstudenter, fulgte vi tilnærminger i bruksorientert design og utviklet
-                        en løsning gjennom workshops med brukere. Løsningen gir unge, konkurrerende friidrettsutøvere mulighet
-                        til å måle sin egen tid mer effektivt når man trener alene. 
-                    </p>
-                </div>
-            </a>
-        </div>
-
-        <div class="card-div">
-            <a href="garden-paradise.html" class="card">
-                <img src="garden-paradise.png" alt="Card image">
-                <div class="card-content">
-                    <h3 class="card-title">Garden Paradise</h3>
-                    <p class="card-description">
-                        In Spring 2024, I spent a semester in South Korea on exchange. Garden Paradise was 
-                        a collaborative team project in my all-time favorite course — Relational Databases. 
-                        It's a plant search tool for beginner plant owners looking to expand 
-                        their collection and need help narrowing down "next plant" options. The intention is 
-                        to let users expand their plant knowledge and dictionary, and save their searches 
-                        for future reference. This project was developed using Python and SQL, with Tkinter 
-                        for GUI. Our data comes from Queensland’s Government’s ‘Waterwise Plants’ dataset. </p>
-                </div>
-            </a>
-        </div>
-
-        <p style="color: #fefefe; display: flex; justify-content: center; align-items: center; font-style: italic;">
-            Laget av Linn, 8/20/2025 21:11.
-        </p>
-
-        <div class="center-div" style="color: #fefefe;">
+        <div class="footer" style="color: #fefefe;">
             
             <h1>La oss ta en kopp matcha sammen!</h1>
             <p>linnshjulstad@gmail.com</p>
