--- a/cv.html
+++ b/cv.html
@@ -41,6 +41,11 @@
                 navBar.classList.toggle("active");
             }
         </script>
+
+        <div class="cv-main">
+            <a href="CV.pdf" download class="link-btn">Download CV</a>
+            <img src="CV.png" alt="CV">
+        </div>
         
         <script src="" async defer></script>
     
